objects/Vertical_RVP__mdt.object
<CustomObject>
    <fields>
        <fullName>RVP_Name__c</fullName>
        <label>RVP Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RVP_UserId__c</fullName>
        <label>RVP UserId</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <label>Vertical</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>US CRT</fullName>
                    <default>true</default>
                    <label>US CRT</label>
                </value>
                <value>
                    <fullName>Essentials &amp; Non-AOV</fullName>
                </value>
                <value>
                    <fullName>High Tech</fullName>
                </value>
                <value>
                    <fullName>High Tech Strategic</fullName>
                </value>
                <value>
                    <fullName>Core</fullName>
                </value>
                <value>
                    <fullName>MFG and Energy</fullName>
                </value>
                <value>
                    <fullName>HLS Pharma/MedTech</fullName>
                </value>
                <value>
                    <fullName>HLS	Payer/Provider</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>FINS</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
                <value>
                    <fullName>UK &amp; North Europe</fullName>
                </value>
                <value>
                    <fullName>South Europe</fullName>
                </value>
                <value>
                    <fullName>Central Europe</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>EMEA CRT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>IsProtected</columns>
        <columns>RVP_Name__c</columns>
        <columns>RVP_UserId__c</columns>
        <columns>Vertical__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
        <language>en_US</language>
    </listViews>
</CustomObject>